# scripts

./: .gitignore  Makefile  README.md  playbook-env.yml  requirements.txt  zyxel-reboot.py
expenses/: Makefile  README.md  expenses.service  pyproject.toml  tasks.py
expenses/expenses/: convert.py  main.py  script.py
regular_payments/: Makefile  README.md  config.example.yml  playbook.yml  pyproject.toml  regular-payments.service  tasks.py
regular_payments/ansible/: deploy-playbook.yml  prepare-playbook.yml
regular_payments/src/: config.py  main.py  payments.py  sheet.py  todoist.py
rss/: .gitignore  Caddyfile  config.json  go.mod  rss.go  rss.service  rss.timer  tasks.py
vas3k_whois/: Makefile  README.md  config.example.yml  playbook.yml  vas3k-whois.service
vas3k_whois/ansible/: deploy-playbook.yml  prepare-playbook.yml
vas3k_whois/src/: main.py
vdsalert/: tasks.py  vdsalert.service  vdsalert.sh  vdsalert.timer
