[tool.poetry]
name = "expenses"
version = "0.1.0"
description = ""
authors = ["Vyacheslav Syrovatsky <vyacheslav@syrovats.ky>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
